@@ -37,6 +37,14 @@ require "$SCRIPTSDIR/debug.pl$DOTIN";
 
 use Text::ParseWords;
 
+eval "use Encode";
+$has_encode = ($@ eq "");
+
+if ($has_encode)
+{
+  use Encode;
+}
+
 # --- XML print formatting  --- #
 
 
@@ -110,8 +118,19 @@ sub gst_xml_leave
 
 sub gst_xml_print_string
 {
+  if ($has_encode)
+  {
+    if (Encode::decode_utf8 ($_[0]) eq undef)
+    {
+      # we first decode the string, if it's not
+      # utf-8 (returns null), then encode it
+      print Encode::encode_utf8 ($_[0]);
+      return;
+    }
+  }
+
+  # It could not encode the string write it as is
   print $_[0];
-  &gst_debug_print_string_to_file ("out.xml", $_[0]);
 }
 
 sub gst_xml_format_indent
